# apicad_public

./: .gitignore  LICENSE  LICENSE-ARBITRAR  Makefile  README.md  apicad  setup.sh
docker/: .dockerignore  Dockerfile
src/: main.py
src/analyzer/: Cargo.toml  analyzer.py  occurrence.py  rustfmt.toml
src/analyzer/llir-0.2.2/: Cargo.toml
src/analyzer/src/: call_graph.rs  feature_extraction.rs  options.rs  semantics.rs  slicer.rs
src/analyzer/src/feature_extractors/: arg_post.rs  arg_pre.rs  causality.rs  mod.rs  retval.rs
src/analyzer/src/symbolic_execution/: block_tracer.rs  constraints.rs  execution.rs  memory.rs  mod.rs  options.rs  state.rs  trace.rs  work_env.rs
src/analyzer/src/utils/: batching.rs  cartesian.rs  json.rs  logging.rs  metadata.rs  mod.rs
src/builder/: __init__.py  build.py  generate_bc.py
src/detector/: arg_post_checker.py  arg_pre_checker.py  causality_checker.py  detector.py  features_handler.py  main.py  retval_checker.py
src/doc_analyzer/: __init__.py  arg_semantics.py  causal_semantics.py  dep_analysis.py  doc_analyzer.py  extract_semantic.py  preprocess_libc.py  preprocess_linux.py  preprocess_openssl.py  ret_semantics.py
src/doc_collector/: __init__.py  collect_libc.py  collect_linux.py  collect_openssl.py  doc_collector.py
src/feature_analyzer/: arg_post_analyzer.py  arg_pre_analyzer.py  casual_analyzer.py  main.py  ret_analyzer.py
src/lib/: bug_report.py  doc_utils.py  keyword_utils.py  utils.py
