[package]
name = "analyzer"
version = "0.2.0"
authors = ["Ziyang Li <liby99@seas.upenn.edu>", # original framework
           "Xiaoke Wang <xkernel.wang@foxmail.com>"]
edition = "2018"

[dependencies]
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
regex = "1"
rand = "0.7"
petgraph = "0.6"
llir = { version = "0.2", path = "./llir-0.2.2" }
lazy_static = "1.4"
chrono = "0.4"
rayon = "1.5.1"
indicatif = { version = "0.15", features = ["rayon"] }
z3 = "0.6"
# tokio = {version = "1.13", features = ["rt", "rt-multi-thread", "time"]}